--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <p class="not-found" </p>
 
-    <div class="info hidden">
+    <div class="hidden">
       <p class="name"></p>
       <p class="bio"></p>
       <p class="repos"></p>
