--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 
     <button>Search</button>
 
-    <img src="" alt="" id="profile-pic" />
-
     <p class="not-found" </p>
 
     <div class="hidden">
+      <div style="text-align: center;" "img-center"><img src="" alt="" id="profile-pic" /></div>
       <p class="name"></p>
       <p class="bio"></p>
       <p class="repos"></p>
